--- a/practice.html
+++ b/practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>テーブル管理</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
@@ -72,138 +72,119 @@
     </table>
   </div>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-    // 🔁 テーブル状態のリアルタイム監視
-    db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-      const tableStatus = {};  // { tableId: {status, startTime, deviceId} }
+  // グローバル変数でテーブル状態を保持
+  let tableStatus = {};
 
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const tableId = data.table;
-        const deviceId = data.device;
-        const timestamp = new Date(data.timestamp);
-        const type = data.type;
+  // テーブル状態のリアルタイム監視と表示更新
+  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+    tableStatus = {};  // 初期化
 
-        if (!tableStatus[tableId]) {
-          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-        }
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      const tableId = data.table;
+      const deviceId = data.device;
+      const timestamp = new Date(data.timestamp);
+      const type = data.type;
 
-        if (type === "enter") {
-          tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-        } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-        }
-      });
+      if (!tableStatus[tableId]) {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      }
 
-      const tbody = document.querySelector("#tableStatusTable tbody");
-      tbody.innerHTML = "";
-
-      for (const [tableId, info] of Object.entries(tableStatus)) {
-        const tr = document.createElement("tr");
-        const now = new Date();
-        const duration = info.startTime ? Math.floor((now - info.startTime) / 60000) : "-";
-
-        tr.className = info.status === "occupied" ? "occupied" : "vacant";
-
-        tr.innerHTML = `
-          <td>${tableId}</td>
-          <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-          <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-          <td>${info.status === "occupied" ? duration : "-"}</td>
-        `;
-        tbody.appendChild(tr);
+      if (type === "enter") {
+        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
       }
     });
 
+    const tbody = document.querySelector("#tableStatusTable tbody");
+    tbody.innerHTML = "";
 
-let tableStatus = {};  // グローバルで保持しておく
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      const tr = document.createElement("tr");
+      tr.dataset.tableId = tableId;
+      tr.className = info.status === "occupied" ? "occupied" : "vacant";
 
-// 利用時間を1分ごとに更新する関数
-function updateUsageTime() {
-  const now = new Date();
-  for (const [tableId, info] of Object.entries(tableStatus)) {
-    if (info.status === "occupied" && info.startTime) {
-      const duration = Math.floor((now - info.startTime) / 60000);
-      const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-      if (row) {
-        row.querySelector(".usage-time").textContent = duration;
-      }
-    }
-  }
-}
+      const duration = info.status === "occupied" && info.startTime
+        ? Math.floor((new Date() - info.startTime) / 60000)
+        : "-";
 
-db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-  tableStatus = {};
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    const tableId = data.table;
-    const deviceId = data.device;
-    const timestamp = new Date(data.timestamp);
-    const type = data.type;
-
-    if (!tableStatus[tableId]) {
-      tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-    }
-
-    if (type === "enter") {
-      tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-    } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-      tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      tr.innerHTML = `
+        <td>${tableId}</td>
+        <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
+        <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
+        <td class="usage-time">${duration}</td>
+      `;
+      tbody.appendChild(tr);
     }
   });
 
-  const tbody = document.querySelector("#tableStatusTable tbody");
-  tbody.innerHTML = "";
-
-  for (const [tableId, info] of Object.entries(tableStatus)) {
-    const tr = document.createElement("tr");
-    tr.dataset.tableId = tableId;
-    tr.className = info.status === "occupied" ? "occupied" : "vacant";
-    tr.innerHTML = `
-      <td>${tableId}</td>
-      <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-      <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-      <td class="usage-time">${info.status === "occupied" ? Math.floor((new Date() - info.startTime) / 60000) : "-"}</td>
-    `;
-    tbody.appendChild(tr);
+  // 利用時間を1分ごとに更新する関数
+  function updateUsageTime() {
+    const now = new Date();
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      if (info.status === "occupied" && info.startTime) {
+        const duration = Math.floor((now - info.startTime) / 60000);
+        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
+        if (row) {
+          row.querySelector(".usage-time").textContent = duration;
+        }
+      }
+    }
   }
-});
 
-// 1分ごとに利用時間を更新
-setInterval(updateUsageTime, 60000);
+  setInterval(updateUsageTime, 60000);
 
-      Object.values(usageMap)
-        .filter(log => log.start && log.end)
-        .sort((a, b) => b.start - a.start)
-        .forEach(log => {
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-            <td>${log.table}</td>
-            <td>${log.device}</td>
-            <td>${log.start.toLocaleString()}</td>
-            <td>${log.end.toLocaleString()}</td>
-          `;
-          tbody.appendChild(tr);
-        });
+  // 利用履歴のリアルタイム表示
+  db.collection("logs").orderBy("timestamp", "desc").limit(100).onSnapshot(snapshot => {
+    const logs = snapshot.docs.map(doc => doc.data()).reverse();
+
+    // startとendを対応付けるmap
+    const usageMap = {}; // key: table_device
+
+    logs.forEach(log => {
+      const key = `${log.table}_${log.device}`;
+      const time = new Date(log.timestamp);
+
+      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
+
+      if (log.type === "enter") {
+        usageMap[key].start = time;
+      } else if (log.type === "exit") {
+        usageMap[key].end = time;
+      }
     });
-  </script>
+
+    const tbody = document.querySelector("#usageLogsTable tbody");
+    tbody.innerHTML = "";
+
+    Object.values(usageMap)
+      .filter(log => log.start && log.end)
+      .sort((a, b) => b.start - a.start)
+      .forEach(log => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${log.table}</td>
+          <td>${log.device}</td>
+          <td>${log.start.toLocaleString()}</td>
+          <td>${log.end.toLocaleString()}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+  });
+</script>
 </body>
 </html>
-
-
-
-
-
-
