--- a/table.html
+++ b/table.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>テーブル管理</title>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: sans-serif;
-      margin: 20px;
-      background: linear-gradient(to right, #f0f4ff, #ffffff);
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      padding: 20px;
     }
-    h1, h2 {
-      color: #333;
+    h1 {
+      text-align: center;
+    }
+    .table-list, .usage-logs {
+      margin-top: 30px;
     }
     table {
-      width: 100%;
       border-collapse: collapse;
-      margin-bottom: 30px;
+      width: 100%;
+      margin-bottom: 40px;
     }
     th, td {
       border: 1px solid #aaa;
@@ -23,184 +28,200 @@
       text-align: center;
     }
     th {
-      background-color: #eee;
-    }
-    tr.occupied {
-      background-color: #ffe4e1;
-    }
-    tr.vacant {
-      background-color: #e0ffe0;
-    }
-    .btn-clear {
-      background-color: #f66;
+      background-color: #00796b;
       color: white;
-      padding: 5px 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
     }
-    .btn-clear:hover {
-      background-color: #d44;
+    .occupied {
+      background-color: #ffccbc;
     }
-    #searchInput {
-      width: 50%;
-      padding: 8px;
-      margin-bottom: 20px;
-      font-size: 16px;
+    .vacant {
+      background-color: #c8e6c9;
     }
   </style>
 </head>
 <body>
-  <h1>テーブル管理</h1>
+  <h1>テーブル管理画面</h1>
 
-  <h2>テーブル一覧</h2>
-  <table id="tableStatus">
-    <thead>
-      <tr>
-        <th>テーブルID</th>
-        <th>状態</th>
-        <th>使用時間</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td colspan="4">読み込み中...</td></tr>
-    </tbody>
-  </table>
+  <div class="table-list">
+    <h2>テーブル一覧</h2>
+    <table id="tableStatusTable">
+      <thead>
+        <tr>
+          <th>テーブルID</th>
+          <th>状態</th>
+          <th>使用開始時刻</th>
+          <th>利用時間（分）</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-  <h2>利用履歴表示</h2>
-  <input type="text" id="searchInput" placeholder="テーブルIDまたは端末IDで検索">
+  <div class="usage-logs">
+    <h2>利用履歴</h2>
+    <table id="usageLogsTable">
+      <thead>
+        <tr>
+          <th>テーブルID</th>
+          <th>端末情報</th>
+          <th>利用開始</th>
+          <th>利用終了</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-  <table id="usageHistory">
-    <thead>
-      <tr>
-        <th>テーブルID</th>
-        <th>開始時刻</th>
-        <th>終了時刻</th>
-        <th>端末ID</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td colspan="4">読み込み中...</td></tr>
-    </tbody>
-  </table>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-  <script>
-    // Firebase 初期化
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  // グローバル変数でテーブル状態を保持
+  let tableStatus = {};
 
-    // 状態更新表示
-    function renderTableStatus(snapshot) {
-      const tbody = document.querySelector("#tableStatus tbody");
-      tbody.innerHTML = "";
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const tr = document.createElement("tr");
-        const status = data.status || "vacant";
-        tr.className = status === "vacant" ? "vacant" : "occupied";
+  // --- 省略: テーブル状態のリアルタイム監視部分は変わらず ---
 
-        let usageTime = "-";
-        if (status === "occupied" && data.usageStart) {
-          const usageStartMs = data.usageStart.toDate().getTime();
-          const elapsedMs = Date.now() - usageStartMs;
-          const m = Math.floor(elapsedMs / 60000);
-          usageTime = `${m}分`;
+  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+    tableStatus = {};
+
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      const tableId = data.table;
+      const deviceId = data.device;
+      const timestamp = new Date(data.timestamp);
+      const type = data.type;
+
+      if (!tableStatus[tableId]) {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      }
+
+      if (type === "enter") {
+        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      }
+    });
+
+    const tbody = document.querySelector("#tableStatusTable tbody");
+    tbody.innerHTML = "";
+
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      const tr = document.createElement("tr");
+      tr.dataset.tableId = tableId;
+      tr.className = info.status === "occupied" ? "occupied" : "vacant";
+
+      const duration = info.status === "occupied" && info.startTime
+        ? Math.floor((new Date() - info.startTime) / 60000)
+        : "-";
+
+      tr.innerHTML = `
+        <td>${tableId}</td>
+        <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
+        <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
+        <td class="usage-time">${duration}</td>
+      `;
+      tbody.appendChild(tr);
+    }
+  });
+
+  // 利用時間を1分ごとに更新
+  function updateUsageTime() {
+    const now = new Date();
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      if (info.status === "occupied" && info.startTime) {
+        const duration = Math.floor((now - info.startTime) / 60000);
+        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
+        if (row) {
+          row.querySelector(".usage-time").textContent = duration;
         }
+      }
+    }
+  }
+  setInterval(updateUsageTime, 60000);
 
-        tr.innerHTML = `
-          <td>${doc.id}</td>
-          <td>${status === "vacant" ? "空席" : "使用中"}</td>
-          <td>${usageTime}</td>
-          <td>${status === "occupied" ? `<button class="btn-clear" onclick="clearTable('${doc.id}')">クリア</button>` : ""}</td>
-        `;
-        tbody.appendChild(tr);
-      });
+  // 端末情報をUser-Agentから解析する関数
+  function parseDeviceInfo(userAgent) {
+    if (!userAgent) return { deviceType: "不明", os: "不明", browser: "不明" };
+    userAgent = userAgent.toLowerCase();
+    let deviceType = "不明";
+    let os = "不明";
+    let browser = "不明";
+
+    if (userAgent.includes("iphone") || userAgent.includes("ipad") || userAgent.includes("ipod")) {
+      deviceType = "スマホ/タブレット";
+      os = "iOS";
+    } else if (userAgent.includes("android")) {
+      deviceType = "スマホ/タブレット";
+      os = "Android";
+    } else if (userAgent.includes("windows")) {
+      deviceType = "PC";
+      os = "Windows";
+    } else if (userAgent.includes("macintosh")) {
+      deviceType = "PC";
+      os = "macOS";
     }
 
-    // 利用履歴表示
-    function renderUsageHistory(snapshot, filterText = "") {
-      const tbody = document.querySelector("#usageHistory tbody");
-      tbody.innerHTML = "";
+    if (userAgent.includes("chrome")) {
+      browser = "Chrome";
+    } else if (userAgent.includes("safari") && !userAgent.includes("chrome")) {
+      browser = "Safari";
+    } else if (userAgent.includes("firefox")) {
+      browser = "Firefox";
+    }
 
-      const logs = [];
-      snapshot.forEach(doc => {
-        const d = doc.data();
-        logs.push({
-          tableId: d.tableId || "",
-          start: d.start ? d.start.toDate() : null,
-          end: d.end ? d.end.toDate() : null,
-          deviceId: d.deviceId || ""
-        });
-      });
+    return { deviceType, os, browser };
+  }
 
-      const filtered = logs.filter(log =>
-        log.tableId.includes(filterText) || log.deviceId.includes(filterText)
-      );
+  // 利用履歴のリアルタイム表示
+  db.collection("logs").orderBy("timestamp", "desc").limit(100).onSnapshot(snapshot => {
+    const logs = snapshot.docs.map(doc => doc.data()).reverse();
 
-      if (filtered.length === 0) {
-        tbody.innerHTML = `<tr><td colspan="4">該当データがありません</td></tr>`;
-        return;
+    // startとendを対応付けるmap
+    const usageMap = {}; // key: table_device
+
+    logs.forEach(log => {
+      const key = `${log.table}_${log.device}`;
+      const time = new Date(log.timestamp);
+
+      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
+
+      if (log.type === "enter") {
+        usageMap[key].start = time;
+      } else if (log.type === "exit") {
+        usageMap[key].end = time;
       }
+    });
 
-      filtered.forEach(log => {
+    const tbody = document.querySelector("#usageLogsTable tbody");
+    tbody.innerHTML = "";
+
+    Object.values(usageMap)
+      .filter(log => log.start && log.end)
+      .sort((a, b) => b.start - a.start)
+      .forEach(log => {
+        const deviceInfo = parseDeviceInfo(log.device);
+        const deviceInfoStr = `${deviceInfo.deviceType} / ${deviceInfo.os} / ${deviceInfo.browser}`;
+
         const tr = document.createElement("tr");
         tr.innerHTML = `
-          <td>${log.tableId}</td>
-          <td>${log.start ? log.start.toLocaleString() : "-"}</td>
-          <td>${log.end ? log.end.toLocaleString() : "利用中"}</td>
-          <td>${log.deviceId}</td>
+          <td>${log.table}</td>
+          <td title="${log.device}">${deviceInfoStr}</td>
+          <td>${log.start.toLocaleString()}</td>
+          <td>${log.end.toLocaleString()}</td>
         `;
         tbody.appendChild(tr);
       });
-    }
-
-    // テーブル強制クリア
-    function clearTable(tableId) {
-      if (!confirm(`${tableId}の使用状態をクリアしますか？`)) return;
-
-      db.collection("tables").doc(tableId).update({
-        status: "vacant",
-        usageStart: null,
-        deviceId: null
-      }).then(() => {
-        alert(`${tableId}を空席にしました`);
-      }).catch(error => {
-        alert("状態クリアに失敗しました: " + error.message);
-      });
-    }
-
-    // 検索ボックス
-    let historySnapshotCache = null;
-    document.getElementById("searchInput").addEventListener("input", e => {
-      const filterText = e.target.value.trim();
-      if (historySnapshotCache) {
-        renderUsageHistory(historySnapshotCache, filterText);
-      }
-    });
-
-    // リアルタイムリスナー
-    db.collection("tables").onSnapshot(snapshot => {
-      renderTableStatus(snapshot);
-    });
-
-    db.collection("usageLogs").orderBy("start", "desc").onSnapshot(snapshot => {
-      historySnapshotCache = snapshot;
-      const filterText = document.getElementById("searchInput").value.trim();
-      renderUsageHistory(snapshot, filterText);
-    });
-  </script>
+  });
+</script>
 </body>
 </html>
+
