--- a/table.html
+++ b/table.html
@@ -196,7 +196,7 @@
     if (ua.includes("iphone os 15")) return "iPhone 13系";
     if (ua.includes("iphone os 14")) return "iPhone 12系";
     if (ua.includes("iphone os 13")) return "iPhone 11系";
-    return "iPhone (不明モデル)";
+    return "iPhone端末";
   }
 
   // Androidも端末名までは取れないが、ビルド情報などで判別試みる
